update by HoangPhuc

--- a/Areas/HumanResources/Views/NhanViens/createNhanVien.cshtml
+++ b/Areas/HumanResources/Views/NhanViens/createNhanVien.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_LayoutHumanResources.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="createNhanVien">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TenNV" class="control-label"></label>
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="getNhanVien">Back to List</a>
 </div>
 
 @section Scripts {
