--- a/Areas/Accounting/Views/Home/Index.cshtml
+++ b/Areas/Accounting/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = "~/Views/Shared/_LayoutAccounting.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
     <div class="row">
@@ -12,3 +12,4 @@
         </div>
     </div>
 </div>
+    
