--- a/Areas/Sale/Views/Home/Index.cshtml
+++ b/Areas/Sale/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = "~/Views/Shared/_LayoutSale.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
     <div class="row">
@@ -11,4 +11,4 @@
             <p>This is the home page for the sale section of the application.</p>
         </div>
     </div>
-</div>
+</div>  
