--- a/Areas/Sale/Views/HopDongs/getHopDong.cshtml
+++ b/Areas/Sale/Views/HopDongs/getHopDong.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_LayoutSale.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Danh sách hợp đồng đặt tiệc</h1>
@@ -47,12 +47,12 @@
                 @Html.DisplayFor(modelItem => item.KhachHang.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NhanVien.ChucVu)
+                @Html.DisplayFor(modelItem => item.NhanVien.TenNV)
             </td>
             <td>
                 <a asp-action="updateHopDong" asp-route-id="@item.MaHD">Edit</a> |
                 <a asp-action="detailsHopDong" asp-route-id="@item.MaHD">Details</a> |
-                <a asp-action="deleteHopDong" asp-route-id="@item.MaHD">Delete</a>
+                <a asp-controller="ChiTietDatTiecs" asp-action="getChiTietDatTiec" asp-route-id="@item.MaHD">ChiTiet</a>
             </td>
         </tr>
 }
