--- a/Areas/Sale/Views/HopDongs/updateHopDong.cshtml
+++ b/Areas/Sale/Views/HopDongs/updateHopDong.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_LayoutSale.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="updateNhanVien">
+        <form asp-action="updateHopDong">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MaHD" />
             <div class="form-group">
