--- a/Areas/Banquet/Views/SanhTiecs/createSanhTiec.cshtml
+++ b/Areas/Banquet/Views/SanhTiecs/createSanhTiec.cshtml
@@ -33,10 +33,14 @@
                 <input asp-for="Gia" class="form-control" />
                 <span asp-validation-for="Gia" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="TrangThai" /> @Html.DisplayNameFor(model => model.TrangThai)
-                </label>
+            <div class="form-group">
+                <label asp-for="TrangThai" class="control-label">Trạng thái</label>
+                <select asp-for="TrangThai" class="form-control">
+                    <option value="">-- Chọn trạng thái --</option>
+                    <option value="Trống">Trống</option>
+                    <option value="Bảo trì">Bảo trì</option>
+                </select>
+                <span asp-validation-for="TrangThai" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
