--- a/Areas/Sale/Views/HopDongs/createHopDong.cshtml
+++ b/Areas/Sale/Views/HopDongs/createHopDong.cshtml
@@ -31,11 +31,6 @@
                 <span asp-validation-for="HopDong.TienCoc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HopDong.TrangThai" class="control-label"></label>
-                <input asp-for="HopDong.TrangThai" class="form-control" />
-                <span asp-validation-for="HopDong.TrangThai" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="HopDong.SoLuong" class="control-label"></label>
                 <input asp-for="HopDong.SoLuong" class="form-control" />
                 <span asp-validation-for="HopDong.SoLuong" class="text-danger"></span>
@@ -47,6 +42,10 @@
             <div class="form-group">
                 <label asp-for="HopDong.MaNV" class="control-label"></label>
                 <select asp-for="HopDong.MaNV" class="form-control" asp-items="ViewBag.MaNV"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="HopDong.MaDV" class="control-label"></label>
+                <select asp-for="HopDong.MaDV" class="form-control" asp-items="ViewBag.MaDV"></select>
             </div>
 
             <!-- Thông tin lịch đặt sảnh -->
