--- a/Areas/Banquet/Views/SuKiens/Create.cshtml
+++ b/Areas/Banquet/Views/SuKiens/Create.cshtml
@@ -24,9 +24,19 @@
                 <span asp-validation-for="TienCoc" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SoLuong" class="control-label"></label>
+                <input asp-for="SoLuong" class="form-control" />
+                <span asp-validation-for="SoLuong" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TrangThai" class="control-label"></label>
                 <input asp-for="TrangThai" class="form-control" />
                 <span asp-validation-for="TrangThai" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PTTT" class="control-label"></label>
+                <input asp-for="PTTT" class="form-control" />
+                <span asp-validation-for="PTTT" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MaKH" class="control-label"></label>
@@ -35,6 +45,10 @@
             <div class="form-group">
                 <label asp-for="MaNV" class="control-label"></label>
                 <select asp-for="MaNV" class ="form-control" asp-items="ViewBag.MaNV"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="MaDV" class="control-label"></label>
+                <select asp-for="MaDV" class ="form-control" asp-items="ViewBag.MaDV"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
