--- a/Areas/Banquet/Views/SuKiens/Details.cshtml
+++ b/Areas/Banquet/Views/SuKiens/Details.cshtml
@@ -24,10 +24,22 @@
             @Html.DisplayFor(model => model.TienCoc)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SoLuong)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SoLuong)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TrangThai)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TrangThai)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PTTT)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PTTT)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHang)
@@ -40,6 +52,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NhanVien.ChucVu)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DichVu)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DichVu.MoTa)
         </dd>
     </dl>
 </div>
