--- a/Areas/Banquet/Views/SuKiens/Edit.cshtml
+++ b/Areas/Banquet/Views/SuKiens/Edit.cshtml
@@ -25,9 +25,19 @@
                 <span asp-validation-for="TienCoc" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SoLuong" class="control-label"></label>
+                <input asp-for="SoLuong" class="form-control" />
+                <span asp-validation-for="SoLuong" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TrangThai" class="control-label"></label>
                 <input asp-for="TrangThai" class="form-control" />
                 <span asp-validation-for="TrangThai" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PTTT" class="control-label"></label>
+                <input asp-for="PTTT" class="form-control" />
+                <span asp-validation-for="PTTT" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MaKH" class="control-label"></label>
@@ -38,6 +48,11 @@
                 <label asp-for="MaNV" class="control-label"></label>
                 <select asp-for="MaNV" class="form-control" asp-items="ViewBag.MaNV"></select>
                 <span asp-validation-for="MaNV" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MaDV" class="control-label"></label>
+                <select asp-for="MaDV" class="form-control" asp-items="ViewBag.MaDV"></select>
+                <span asp-validation-for="MaDV" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
