--- a/Areas/Banquet/Views/SuKiens/Index.cshtml
+++ b/Areas/Banquet/Views/SuKiens/Index.cshtml
@@ -20,13 +20,22 @@
                 @Html.DisplayNameFor(model => model.TienCoc)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.SoLuong)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.TrangThai)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PTTT)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.KhachHang)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NhanVien)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DichVu)
             </th>
             <th></th>
         </tr>
@@ -41,13 +50,22 @@
                 @Html.DisplayFor(modelItem => item.TienCoc)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.SoLuong)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.TrangThai)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PTTT)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.KhachHang.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NhanVien.ChucVu)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DichVu.MoTa)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.MaHD">Edit</a> |
