--- a/Areas/HumanResources/Views/NhanViens/getNhanVien.cshtml
+++ b/Areas/HumanResources/Views/NhanViens/getNhanVien.cshtml
@@ -52,7 +52,7 @@
             <td>
                 <a asp-action="updateNhanVien" asp-route-id="@item.MaNV">Edit</a> |
                 <a asp-action="detailsNhanVien" asp-route-id="@item.MaNV">Details</a> |
-                <a asp-action="deleteNhanVien" asp-route-id="@item.MaNV">Delete</a>
+                <a asp-action="deleteNhanVien" asp-route-id="@item.MaNV">Lock Account</a>
             </td>
         </tr>
 }
