--- a/Areas/Sale/Views/HopDongs/detailsHopDong.cshtml
+++ b/Areas/Sale/Views/HopDongs/detailsHopDong.cshtml
@@ -39,7 +39,13 @@
             @Html.DisplayNameFor(model => model.NhanVien)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NhanVien.ChucVu)
+            @Html.DisplayFor(model => model.NhanVien.TenNV)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DichVu)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DichVu.TenDV)
         </dd>
     </dl>
     <h4>Lịch đặt sảnh</h4>
@@ -61,7 +67,7 @@
                         <td>@lich.BatDau.ToString("dd/MM/yyyy HH:mm")</td>
                         <td>@lich.KetThuc.ToString("dd/MM/yyyy HH:mm")</td>
                         <td>@lich.TrangThai</td>
-                        <td>@lich.MaSanh</td>
+                        <td>@lich.Sanh.TenSanh</td>
                     </tr>
                 }
             </tbody>
