--- a/Areas/Banquet/Views/SanhTiecs/detailsSanhTiec.cshtml
+++ b/Areas/Banquet/Views/SanhTiecs/detailsSanhTiec.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Chi Tiết Sảnh Tiệc</h1>
 
 <div>
     <h4>SanhTiec</h4>
@@ -40,6 +40,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TrangThai)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.HinhAnh)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="@Model.HinhAnh" alt="Hình ảnh sảnh" class="img-fluid" style="max-height: 300px;" />
         </dd>
     </dl>
 </div>
