--- a/Areas/Banquet/Views/SuKiens/updateSuKien.cshtml
+++ b/Areas/Banquet/Views/SuKiens/updateSuKien.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Cập nhật sự kiện</h1>
 
 <h4>HopDong</h4>
 <hr />
@@ -62,7 +62,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="getSuKien">Back to List</a>
 </div>
 
 @section Scripts {
