--- a/Views/Shared/Components/Default.cshtml
+++ b/Views/Shared/Components/Default.cshtml
@@ -8,9 +8,25 @@
         {
             foreach (var item in Model)
             {
-                <a class="d-block mb-2" asp-area="@item.Area" asp-controller="@item.Controller" asp-action="@item.Action">
-                    <i class="fa-solid @item.Icon"></i> @item.Title
-                </a>
+                if (!string.IsNullOrEmpty(item.Page))
+                {
+                    <!-- Razor Page -->
+                    <a class="d-block mb-2"
+                       asp-area="@item.Area"
+                       asp-page="@item.Page">
+                        <i class="fa @item.Icon"></i> @item.Title
+                    </a>
+                }
+                else
+                {
+                    <!-- MVC Controller/Action -->
+                    <a class="d-block mb-2"
+                       asp-area="@item.Area"
+                       asp-controller="@item.Controller"
+                       asp-action="@item.Action">
+                        <i class="fa @item.Icon"></i> @item.Title
+                    </a>
+                }
             }
         }
         else
